<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:padding="16dp"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--HOME CARD VIEW-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvMale"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvFemale"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/colorSelecionado"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_home"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>
        </androidx.cardview.widget.CardView>

    <!--
        start_toEnd quiere decir que el lado izquierdo de vista debe aliniarse
        con el lado derecho que le digamos

        warp_parent solo ocupa el espacio que tiene si ponemos algo solo ocupara ese espacio
        match_parent ocupara all el espacio de padre
    -->


    <!--DONA CARD VIEW-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvFemale"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/cvMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/colorPredeterminado"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_dona"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dona"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- La altura con slider-->
    <androidx.cardview.widget.CardView
        android:id="@+id/vwHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/colorPredeterminado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:textAllCaps="true"
                android:textColor="@color/white">
            </TextView>

            <TextView
                android:id="@+id/tvHeight"
                android:text="120 cm"
                android:textSize="38sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAllCaps="true">
            </TextView>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200">
            </com.google.android.material.slider.RangeSlider>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--PESO-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeigh"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/vwHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvAge"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/colorPredeterminado">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/white">
            </TextView>

            <TextView
                android:id="@+id/tvWeigh"
                tools:text="60"
                android:textSize="38sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAllCaps="true">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubractWeigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/background_FAB"
                    android:src="@drawable/ic_subtract"
                    app:tint="@color/white"
                    android:layout_marginEnd="16dp">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusWeight"
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_plus"
                    app:backgroundTint="@color/background_FAB"
                    app:tint="@color/white"
                    android:layout_height="wrap_content">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!--EDAD-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvAge"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/vwHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvWeigh"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/colorPredeterminado">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@color/white">
            </TextView>

            <TextView
                android:id="@+id/tvAge"
                tools:text="18"
                android:textSize="38sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAllCaps="true">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnSubtractAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:backgroundTint="@color/background_FAB"
                    app:tint="@color/white"
                    android:src="@drawable/ic_subtract"
                    >

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnPlusAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/background_FAB"
                    app:tint="@color/white"
                    android:src="@drawable/ic_plus">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--BOTON CALCULAR-->
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_height="80dp">

    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>